# PlanningTask

taskPlanning/: .gitignore  ApplicationContext.cpp  ApplicationContext.hpp  CMakeLists.txt  ControllerOperationContext.cpp  ControllerOperationContext.hpp  ControllerVisualizationContext.cpp  ControllerVisualizationContext.hpp  Main.qml  ModelContext.cpp  ModelContext.hpp  ViewOperationContext.cpp  ViewOperationContext.hpp  ViewVisualizationContext.cpp  ViewVisualizationContext.hpp  main.cpp  planificarTareas.drawio  planningTaskRenovate.drawio
taskPlanning/controller/: AddUser.cpp  AddUser.hpp  ControllerOperationContext.cpp  ControllerOperationContext.hpp  ControllerVisualizationContext.cpp  ControllerVisualizationContext.hpp  IAddUser.hpp  IRegisterFamilyUnit.hpp  ISelectFamilyUnit.hpp  IShowFamilyUnit.hpp  IShowUser.hpp  RegisterFamilyUnit.cpp  RegisterFamilyUnit.hpp  SelectFamilyUnit.cpp  SelectFamilyUnit.hpp  ShowFamilyUnit.cpp  ShowFamilyUnit.hpp  ShowUser.cpp  ShowUser.hpp
taskPlanning/controller/operation/: AddTask.cpp  AddTask.hpp  AddUser.cpp  AddUser.hpp  AssignTask.cpp  AssignTask.hpp  IAddTask.hpp  IAddUser.hpp  IAssignTask.hpp  IRegisterFamilyUnit.hpp  ISelectFamilyUnit.hpp  ISelectTask.hpp  ISelectUser.hpp  RegisterFamilyUnit.cpp  RegisterFamilyUnit.hpp  SelectFamilyUnit.cpp  SelectFamilyUnit.hpp  SelectTask.cpp  SelectTask.hpp  SelectUser.cpp  SelectUser.hpp
taskPlanning/controller/signal/: AddedFamilyUnit.cpp  AddedFamilyUnit.hpp  AddedUser.cpp  AddedUser.hpp
taskPlanning/controller/visualization/: IShowFamilyUnit.hpp  IShowTask.hpp  IShowUser.hpp  ShowFamilyUnit.cpp  ShowFamilyUnit.hpp  ShowTask.cpp  ShowTask.hpp  ShowUser.cpp  ShowUser.hpp
taskPlanning/controller/visualization/signal/: AddedFamilyUnit.cpp  AddedFamilyUnit.hpp  AddedTask.cpp  AddedTask.hpp  AddedUser.cpp  AddedUser.hpp
taskPlanning/model/: FamiliesUnits.cpp  FamiliesUnits.hpp  FamilyUnit.cpp  FamilyUnit.hpp  IFamiliesUnits.hpp  IFamilyUnit.hpp  ITask.hpp  ITasks.hpp  IUser.hpp  IUsers.hpp  ModelContext.cpp  ModelContext.hpp  Task.cpp  Task.hpp  Tasks.cpp  Tasks.hpp  User.cpp  User.hpp  Users.cpp  Users.hpp
taskPlanning/model/signal/: AddedFamilyUnit.cpp  AddedFamilyUnit.hpp  AddedTask.cpp  AddedTask.hpp  AddedUser.cpp  AddedUser.hpp
taskPlanning/qml/: AddFamilyUnit.qml  AddTask.qml  AddUser.qml  AssignTask.qml  ManageFamilyUnit.qml  Operations.qml
taskPlanning/utils/: Publisher.hpp  Subscriber.hpp
taskPlanning/view/: AddUser.cpp  AddUser.hpp  IRegisterFamilyUnit.hpp  RegisterFamilyUnit.cpp  RegisterFamilyUnit.hpp  SelectFamilyUnit.cpp  SelectFamilyUnit.hpp  ShowFamilyUnit.cpp  ShowFamilyUnit.hpp  ShowUser.cpp  ShowUser.hpp  ViewOperationContext.cpp  ViewOperationContext.hpp  ViewVisualizationContext.cpp  ViewVisualizationContext.hpp
taskPlanning/view/operation/: AddTask.cpp  AddTask.hpp  AddUser.cpp  AddUser.hpp  AssignTask.cpp  AssignTask.hpp  RegisterFamilyUnit.cpp  RegisterFamilyUnit.hpp  SelectFamilyUnit.cpp  SelectFamilyUnit.hpp  SelectTask.cpp  SelectTask.hpp  SelectUser.cpp  SelectUser.hpp  ViewFactory.cpp  ViewFactory.hpp
taskPlanning/view/visualization/: ShowFamilyUnit.cpp  ShowFamilyUnit.hpp  ShowTask.cpp  ShowTask.hpp  ShowUser.cpp  ShowUser.hpp  ViewFactory.cpp  ViewFactory.hpp
